# sshTunnelGui

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-checks.yml  build-release-binary-windows.yml
src/: connection.ui  connectionDialog.ui  connectiondialog.cpp  connectiondialog.h  main.cpp  mainDialog.ui  maindialog.cpp  maindialog.h
